--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-    "name": "edu_page",
-    "version": "1.0.0",
-    "description": "教育资源站点爬虫数据",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/katoto/edu_page.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "mongodb": "^3.1.9",
-        "puppeteer": "^1.10.0"
-    },
-    "bugs": {
-        "url": "https://github.com/katoto/edu_page/issues"
-    },
-    "homepage": "https://github.com/katoto/edu_page#readme"
+  "name": "edu_page",
+  "version": "1.0.0",
+  "description": "教育资源站点爬虫数据",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/katoto/edu_page.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "file-saver": "^2.0.1",
+    "mongodb": "^3.1.9",
+    "puppeteer": "^1.10.0",
+    "xlsx": "^0.14.2"
+  },
+  "bugs": {
+    "url": "https://github.com/katoto/edu_page/issues"
+  },
+  "homepage": "https://github.com/katoto/edu_page#readme"
 }
